--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/checkbox": "^0.5.17",
+    "axios": "^1.7.5",
     "expo": "~51.0.28",
     "expo-checkbox": "^3.0.0",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
+    "lottie-react-native": "^6.7.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.5",
